<resources>
    <string name="app_name">ALC Challenge</string>
    <string name="alc_title">ALC 4.0 Phase 1</string>
    <string name="about_alc">About ALC</string>
    <string name="my_profile">My Profile</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="name">Mark-Anthony Kobby Sappor</string>
    <string name="track">Android</string>
    <string name="country">Ghana</string>
    <string name="email">mackay.sappor@gmail.com</string>
    <string name="phone">+233249250698</string>
</resources>
